welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Int(93)
 required: Boolean
	if(93)
           ^nearHundred:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(93)
        ^