welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = 
{
	if(93)
	{
		return true
	}
}